--- a/CompraRapida.Web/CompraRapida.Web.csproj
+++ b/CompraRapida.Web/CompraRapida.Web.csproj
@@ -18,10 +18,24 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\CompraRapida.Repositorio\CompraRapida.Repositorio.csproj" />
+  </ItemGroup>
+  
+  <ItemGroup>
     <!-- Don't publish the SPA source files, but do show them in the project files list -->
     <Content Remove="$(SpaRoot)**" />
     <None Remove="$(SpaRoot)**" />
     <None Include="$(SpaRoot)**" Exclude="$(SpaRoot)node_modules\**" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CompraRapida.Repositorio\CompraRapida.Repositorio.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Update="config.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
